fix: hide overflow x
- unknown x scrollbar?

--- a/frontend/app/globals.scss
+++ b/frontend/app/globals.scss
@@ -31,6 +31,7 @@ body {
     margin: 0px;
     background-color: white;
     color: black;
+    overflow-x: hidden;
 }
 
 main {
